Update test cases based on test plan

--- a/generators/rtl/test/Makefile
+++ b/generators/rtl/test/Makefile
@@ -19,15 +19,12 @@ VCS_OPS = -R -full64 -sverilog +v2k -timescale=1ns/1ns  \
 		-o $(simv_name)
 
 # verdi dump wave compile option
-VERDI_OPS = -P ${NOVAS_HOME}/share/PLI/VCS/linux64/novas.tab \
-			${NOVAS_HOME}/share/PLI/VCS/linux64/pli.a \
+VERDI_OPS = -P ${VERDI_HOME}/share/PLI/VCS/linux64/novas.tab \
+			${VERDI_HOME}/share/PLI/VCS/linux64/pli.a \
 			+fsdb+autoflush
 
 sim: $(simv_name)
 	./$(simv_name)
-
-dve: $(src)
-	bsub -Is vcs $(VCS_OPS) $(src) -gui
 
 vcs: $(src)
 	bsub -Is vcs $(VCS_OPS) $(src) $(VERDI_OPS)
