--- a/generators/rtl/test/case_1/Makefile
+++ b/generators/rtl/test/case_1/Makefile
@@ -23,13 +23,13 @@ gen_rtl: $(rdl_src)
 	mv ./gen/rtl/* ./gen
 	rm -rf ./gen/rtl
 
-vcs: $(rtl_src)
-	bsub -Is vcs $(VCS_OPS) $(rtl_src) $(VERDI_OPS)
+vcs: gen_rtl $(rtl_src)
+	bsub -Is vcs $(VCS_OPS) $(VERDI_OPS)
 
 sim: vcs
 	./$(simv_name)
 
-verdi: vcs $(rtl_src)
+verdi: sim $(rtl_src)
 	bsub -Is verdi -sv $(rtl_src) -ssf *.fsdb
 
 .PHONY: clean
