--- a/generators/rtl/test/case_2/Makefile
+++ b/generators/rtl/test/case_2/Makefile
@@ -23,7 +23,7 @@ gen_rtl: $(rdl_src)
 	mv ./gen/rtl/* ./gen && rm -rf ./gen/rtl
 
 vcs: gen_rtl $(rtl_src)
-	bsub -Is vcs $(VCS_OPS) $(rtl_src) $(VERDI_OPS)
+	bsub -Is vcs $(VCS_OPS) $(VERDI_OPS)
 
 sim: vcs
 	./$(simv_name)
