--- a/generators/rtl/test/case_8/Makefile
+++ b/generators/rtl/test/case_8/Makefile
@@ -14,8 +14,7 @@ VCS_OPS = -full64 -sverilog +v2k -timescale=1ns/1ns     \
 
 # verdi dump wave compile option
 VERDI_OPS = -P $(VERDI_HOME)/share/PLI/VCS/linux64/novas.tab \
-			$(VERDI_HOME)/share/PLI/VCS/linux64/pli.a \
-			+fsdb+autoflush
+			$(VERDI_HOME)/share/PLI/VCS/linux64/pli.a
 
 
 gen_rtl: $(rdl_src)
