update test cases

--- a/generators/rtl/test/case_7/Makefile
+++ b/generators/rtl/test/case_7/Makefile
@@ -2,7 +2,7 @@ simv_name = simv
 rtl_src = file.list
 rdl_src = tb/testbench.rdl
 
-VCS_OPS = -full64 -sverilog +v2k -timescale=1ns/1ns     \
+VCS_OPS = -full64 -sverilog +v2k -timescale=1ns/1ps     \
 		-debug_acc+all                                  \
 		+warn=all                                       \
 		+notimingcheck                                  \
@@ -14,15 +14,14 @@ VCS_OPS = -full64 -sverilog +v2k -timescale=1ns/1ns     \
 
 # verdi dump wave compile option
 VERDI_OPS = -P $(VERDI_HOME)/share/PLI/VCS/linux64/novas.tab \
-			$(VERDI_HOME)/share/PLI/VCS/linux64/pli.a \
-			+fsdb+autoflush
+			$(VERDI_HOME)/share/PLI/VCS/linux64/pli.a
 
 
 gen_rtl: $(rdl_src)
 	hrda generate -f $(rdl_src) -gdir ./gen -grtl
 	mv ./gen/rtl/* ./gen && rm -rf ./gen/rtl
 
-vcs: gen_rtl $(rtl_src)
+vcs: $(rtl_src)
 	bsub -Is vcs $(VCS_OPS) $(VERDI_OPS)
 
 sim: vcs
@@ -33,7 +32,6 @@ verdi: sim $(rtl_src)
 
 .PHONY: clean
 clean:
-	rm -rf gen/*
 	rm -rf *csrc
 	rm -rf ./*.daidir
 	rm -rf *fsdb*
