fix generation of sync signals and update makefile

--- a/generators/rtl/test/Makefile
+++ b/generators/rtl/test/Makefile
@@ -1,26 +1,45 @@
 # top-level test run
 sim1:
-	cd case_1 && $(MAKE) sim && $(MAKE) clean && $(MAKE) gen_rtl
+	cd case_1 && $(MAKE) clean && $(MAKE) gen_rtl && $(MAKE) sim
+clean1:
+	cd case_1 && $(MAKE) clean
 
 sim2:
-	cd case_2 && $(MAKE) sim && $(MAKE) clean && $(MAKE) gen_rtl
+	cd case_2 && $(MAKE) clean && $(MAKE) gen_rtl && $(MAKE) sim
+clean2:
+	cd case_2 && $(MAKE) clean
 
 sim3:
-	cd case_3 && $(MAKE) sim && $(MAKE) clean && $(MAKE) gen_rtl
+	cd case_3 && $(MAKE) clean && $(MAKE) gen_rtl && $(MAKE) sim
+clean3:
+	cd case_3 && $(MAKE) clean
 
 sim4:
-	cd case_4 && $(MAKE) sim && $(MAKE) clean && $(MAKE) gen_rtl
+	cd case_4 && $(MAKE) clean && $(MAKE) gen_rtl && $(MAKE) sim
+clean4:
+	cd case_4 && $(MAKE) clean
 
 sim5:
-	cd case_5 && $(MAKE) sim && $(MAKE) clean && $(MAKE) gen_rtl
+	cd case_5 && $(MAKE) clean && $(MAKE) gen_rtl && $(MAKE) sim
+clean5:
+	cd case_5 && $(MAKE) clean
 
 sim6:
-	cd case_6 && $(MAKE) sim && $(MAKE) clean && $(MAKE) gen_rtl
+	cd case_6 && $(MAKE) clean && $(MAKE) gen_rtl && $(MAKE) sim
+clean6:
+	cd case_6 && $(MAKE) clean
 
 sim7:
-	cd case_7 && $(MAKE) sim && $(MAKE) clean && $(MAKE) gen_rtl
+	cd case_7 && $(MAKE) clean && $(MAKE) gen_rtl && $(MAKE) sim
+clean7:
+	cd case_7 && $(MAKE) clean
 
 sim8:
-	cd case_8 && $(MAKE) sim && $(MAKE) clean && $(MAKE) gen_rtl
+	cd case_8 && $(MAKE) clean && $(MAKE) gen_rtl && $(MAKE) sim
+clean8:
+	cd case_8 && $(MAKE) clean
 
-simall: sim1 sim2 sim3 sim4 sim5 sim6 sim7 sim8
+
+sim_all: sim1 sim2 sim3 sim4 sim5 sim6 sim7 sim8
+
+clean_all: clean1 clean2 clean3 clean4 clean5 clean6 clean7 clean8
