--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,8 +12,8 @@
             "console": "integratedTerminal",
             "justMyCode": false,
             "args": [
-                "generate", "-grtl", "-f", ".\\test\\ipxact_block_example.xml",
-                ".\\test\\test_map.rdl", "-gdir", ".\\test"
+                "generate", "-grtl", "-f",
+                ".\\test\\test_alias_2.rdl", "-gdir", ".\\test"
             ],
             "subProcess": true
         }
