--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,7 +13,7 @@
             "justMyCode": false,
             "args": [
                 "generate", "-grtl", "-f",
-                "./test/test_alias_2.rdl", "-gdir", "./test"
+                "./test/test_alias.rdl", "-gdir", "./test"
             ],
             "subProcess": true
         }
