--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,8 +12,8 @@
             "console": "integratedTerminal",
             "justMyCode": false,
             "args": [
-                "generate", "-grtl", "-f",
-                "./test/test_alias.rdl", "-gdir", "./test"
+                "generate", "-f",
+                "./test/intr_ex.rdl"
             ],
             "subProcess": true
         }
